--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["main", "dev"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,22 +22,30 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout do código
         uses: actions/checkout@v4
-      - name: Setup Pages
+
+      - name: Configurar GitHub Pages
         uses: actions/configure-pages@v5
-      - name: Upload artifact
+
+      # Se estiver na branch "dev", move os arquivos para a pasta /dev/home/
+      - name: Organizar arquivos para branch dev
+        if: github.ref == 'refs/heads/dev'
+        run: |
+          mkdir -p dev/home
+          mv * dev/home/ || true  # Move tudo para /dev/home/, ignorando erros
+
+      - name: Upload dos arquivos para o GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: '.'
-      - name: Deploy to GitHub Pages
+
+      - name: Fazer deploy no GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
